feat: support adaptive extension loader & compiler